tests/paczka1/fuzzy1/55862188.err
Error in line 3: FkH1JvjhGGI S540 7,0
Error in line 12: kOm S540 36,5
Error in line 10: A953 A467 85,1
Error in line 22: A953 S540 16,6
Error in line 18: dObUeuE A467 72,9
Error in line 27: UQsD20sVn S824 75,7
Error in line 23: A953 S824 25,2
Error in line 32: 3GRdaiAdN9 S540 70,6
